<resources>

    <string name="app_name">Practica Final</string>
    <string name="facebook_app_id" translatable="false">437386403287908</string>
    <string name="twitter_app_id" translatable="false">L4jLEI4vA6WatHtFgv4BF9J7T</string>
    <string name="favorite">Favorites</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="repassword">Confirm Password</string>
    <string name="successful_registration">You have been successfully registered</string>

    <string name="description">Description</string>
    <string name="updateProfile">Update profile</string>
    
    <string name="take_picture">Take Picture</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    
    <string name="search_radius">Search radius</string>
    <string name="search">Search</string>
    <string name="recent_search">Recent Searches</string>

    <string name="searching_message">Searching...</string>
    
    <string name="accept">Accept terms and conditions</string>

    <string name="send">Send</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add comment</string>
    <string name="comment_hint">Food for all!</string>
    <string name="restaurant_description">Type of food </string>

    <string name="error">Error</string>
    <string name="wrong_credentials">Wrong Credentials\nVerifiy your username or password</string>
    <string name="accept_terms">You have to accept terms and conditions</string>
    <string name="empty_field">Empty field</string>
    <string name="unvalid_email">Invalid email</string>
    <string name="wrong_password">Passwords doesnt match</string>
    <string name="ok">OK</string>
    <string name="wrong_information">Input information invalid</string>
    <string name="used_email">Email already registered</string>

    <string name="empty_search">Empty search!</string>
    <string name="successful_actualization">Successful actualization</string>

    <string name="all_tab">All</string>
    <string name="only_open_tab">ONLY OPEN</string>
    <string name="double_dash" translatable="false">--&#160;&#160;</string>
    <string name="double_point" translatable="false">:&#160;</string>

    <string name="retry">Retry</string>
    <string name="next">Next</string>

    <string name="filter_all">All</string>


    <string name="no_results_title">No results found</string>
    <string name="no_results_body" translatable="false">
        There are no restaurants opened with the desired filter.\n\nTry another one</string>
    <string name="no_results_ok">OK</string>


    <string name="non_results">Nothing to show</string>

    <string name="google_maps_api_key" translatable="false">AIzaSyA_ei-6vuaPioSCY6T2ToFD7VHzQ6yIQrQ</string>



</resources>
