<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView10">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:onClick="buscaPerLocalitzacio"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="35dp"
            android:onClick="netejaInfo"
            android:layout_height="35dp"
            app:srcCompat="@android:drawable/btn_dialog" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/radius_layout"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/search_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/search_radius" />

        <SeekBar
            android:id="@+id/searchSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/searchRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="0 km" />
    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radius_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="buscarPerNom"
        android:text="@string/search" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/recent_search" />

    <ListView
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/last_places_listview"
        android:layout_below="@id/search_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>